# session-kb

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXTRA-PATTERNS.md  SCHEMA.md
docs/schema/: chunk.schema.json  claude_code_ext.schema.json  embedding.schema.json  session.schema.json  turn.schema.json
scripts/: gen_schema.py
src/session_kb/: __init__.py  chunker.py  embed.py  index.py  ingest.py  init.py  schema.py  search.py
src/session_kb/connectors/: __init__.py  claude_code.py
src/session_kb/scrub/: __init__.py  builtin.py  composite.py  gitleaks.py  interface.py  patterns.py  trufflehog.py
src/session_kb/templates/data_repo/: CLAUDE.md  README.md  gitignore
tests/: test_chunker.py  test_connector_claude_code.py  test_ingest.py  test_schema.py  test_scrub.py
