[project]
name = "session-kb"
version = "0.0.0"
description = "Harness-agnostic archival & semantic retrieval for finished AI coding sessions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "llm",
    "llm-embed-onnx",
    "sqlite-vec",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
session-search = "session_kb.search:main"
session-ingest = "session_kb.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_kb"]

[tool.ruff]
line-length = 100
