[project]
name = "session-kb"
version = "0.0.0"
description = "Harness-agnostic archival & semantic retrieval for finished AI coding sessions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "llm",
    "llm-embed-onnx",
    "sqlite-vec",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyyaml"]
yaml = ["pyyaml"]

[project.scripts]
session-search = "session_kb.search:main"
session-ingest = "session_kb.ingest:main"
session-kb-init = "session_kb.init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_kb"]

# Ship the data-repo template (incl. dotfiles / .gitkeep) so session-kb-init works
# from a wheel install, not only from source.
[tool.hatch.build.targets.wheel.force-include]
"src/session_kb/templates" = "session_kb/templates"

[tool.ruff]
line-length = 100
