[project]
name = "session-kb"
version = "0.0.0"
description = "Harness-agnostic archival & semantic retrieval for finished AI coding sessions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "llm",
    "llm-embed-onnx",
    "sqlite-vec",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pyyaml"]
yaml = ["pyyaml"]

[project.scripts]
session-search = "session_kb.search:main"
session-ingest = "session_kb.ingest:main"
session-kb-init = "session_kb.init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_kb"]

[tool.ruff]
line-length = 100

# Coverage is scoped to the implemented modules (schema + scrub). Stub modules
# (chunker/embed/index/ingest/search/connectors) raise NotImplementedError and
# are gated by milestone PRs as they land.
[tool.pytest.ini_options]
addopts = "--cov=session_kb.schema --cov=session_kb.scrub --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# gitleaks/trufflehog are optional external-CLI wrappers: their detection path
# needs the binary on $PATH (absent in CI), so only the no-op fallback runs here.
omit = [
    "src/session_kb/scrub/gitleaks.py",
    "src/session_kb/scrub/trufflehog.py",
]
